roles/add-ons/templates/harbor/7_clair.yaml
---
# Source: harbor/templates/clair/clair-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: "release-name-harbor-clair"
  labels:
    heritage: Tiller
    release: release-name
    chart: harbor
    app: "harbor"
spec:
  ports:
    - name: clair
      port: 6060
    - name: health
      port: 6061
  selector:
    release: release-name
    app: "harbor"
    component: clair

---
# Source: harbor/templates/clair/clair-dpl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-harbor-clair
  labels:
    heritage: Tiller
    release: release-name
    chart: harbor
    app: "harbor"
    component: clair
spec:
  replicas: 1
  selector:
    matchLabels:
      release: release-name
      app: "harbor"
      component: clair
  template:
    metadata:
      labels:
        heritage: Tiller
        release: release-name
        chart: harbor
        app: "harbor"
        component: clair
      annotations:
        checksum/secret: 21c8ad5cfd35d17b8340951740c7e85e42150d34848fc0be1cc8a2629303b087
    spec:
      imagePullSecrets:
        - name: harbor-registry-secret
      containers:
      - name: clair
        image: slzcc/clair-photon:v2.0.8-v1.8.2
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /health
            port: 6061
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 6061
          initialDelaySeconds: 30
          periodSeconds: 10
        args: ["-log-level", "debug"]
        ports:
        - containerPort: 6060
        volumeMounts:
        - name: config
          mountPath: /etc/clair/config.yaml
          subPath: config.yaml
      volumes:
      - name: config
        secret:
          secretName: "release-name-harbor-clair"
