roles/add-ons/templates/harbor/8_notary.yaml
---
# Source: harbor/templates/notary/notary-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-harbor-notary-server
  labels:
    heritage: Tiller
    release: release-name
    chart: harbor
    app: "harbor"
spec:
  ports:
  - port: 4443
  selector:
    release: release-name
    app: "harbor"
    component: notary-server

---
# Source: harbor/templates/notary/notary-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-harbor-notary-server
  labels:
    heritage: Tiller
    release: release-name
    chart: harbor
    app: "harbor"
    component: notary-server
spec:
  replicas: 1
  selector:
    matchLabels:
      release: release-name
      app: "harbor"
      component: notary-server
  template:
    metadata:
      labels:
        heritage: Tiller
        release: release-name
        chart: harbor
        app: "harbor"
        component: notary-server
      annotations:
        checksum/secret: c0c411212fe00f3ea7bb265a212dc9f37f7b4dc58c40cb767dd0a5484269cdad
        checksum/secret-core: 3f43764995a32b20d8ac029d57d787f61059b9d5f23d4a43f9ecce75616d13e7
    spec:
      securityContext:
        fsGroup: 10000
      imagePullSecrets:
        - name: harbor-registry-secret
      containers:
      - name: notary-server
        image: slzcc/notary-server-photon:v0.6.1-v1.8.2
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: config
          mountPath: /etc/notary/server-config.postgres.json
          subPath: server.json
        - name: token-service-certificate
          mountPath: /root.crt
          subPath: tls.crt
        - name: signer-certificate
          mountPath: /etc/ssl/notary/ca.crt
          subPath: ca.crt
      volumes:
      - name: config
        secret:
          secretName: "release-name-harbor-notary-server"
      - name: token-service-certificate
        secret:
          secretName: release-name-harbor-core
      - name: signer-certificate
        secret:
          secretName: release-name-harbor-notary-server

---
apiVersion: v1
kind: Service
metadata:
  name: release-name-harbor-notary-signer
  labels:
    heritage: Tiller
    release: release-name
    chart: harbor
    app: "harbor"
spec:
  ports:
  - port: 7899
  selector:
    release: release-name
    app: "harbor"
    component: notary-signer

---
# Source: harbor/templates/notary/notary-signer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-harbor-notary-signer
  labels:
    heritage: Tiller
    release: release-name
    chart: harbor
    app: "harbor"
    component: notary-signer
spec:
  replicas: 1
  selector:
    matchLabels:
      release: release-name
      app: "harbor"
      component: notary-signer
  template:
    metadata:
      labels:
        heritage: Tiller
        release: release-name
        chart: harbor
        app: "harbor"
        component: notary-signer
      annotations:
        checksum/secret: bdc2bf75d75b06dcdf960e28c81a962b36087032ad11aeb62bea739bbee153f4
    spec:
      securityContext:
        fsGroup: 10000
      imagePullSecrets:
        - name: harbor-registry-secret
      containers:
      - name: notary-signer
        image: slzcc/notary-signer-photon:v0.6.1-v1.8.2
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: config
          mountPath: /etc/notary/signer-config.postgres.json
          subPath: signer.json
        - name: signer-certificate
          mountPath: /etc/ssl/notary/tls.crt
          subPath: tls.crt
        - name: signer-certificate
          mountPath: /etc/ssl/notary/tls.key
          subPath: tls.key
      volumes:
      - name: config
        secret:
          secretName: "release-name-harbor-notary-server"
      - name: signer-certificate
        secret:
          secretName: release-name-harbor-notary-server
