roles/add-ons/templates/harbor/3_ingress.yaml
---
# Source: harbor/templates/ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "release-name-harbor-ingress"
  labels:
    heritage: Tiller
    release: release-name
    chart: harbor
    app: "harbor"
  annotations:
    ingress.kubernetes.io/proxy-body-size: "0"
    ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - secretName: "release-name-harbor-ingress"
    hosts:
    - harbor.shileizcc.com
  - secretName: "release-name-harbor-ingress"
    hosts:
    - notary.shileizcc.com
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: release-name-harbor-portal
          servicePort: 80
      - path: /api/
        backend:
          serviceName: release-name-harbor-core
          servicePort: 80
      - path: /service/
        backend:
          serviceName: release-name-harbor-core
          servicePort: 80
      - path: /v2/
        backend:
          serviceName: release-name-harbor-core
          servicePort: 80
      - path: /chartrepo/
        backend:
          serviceName: release-name-harbor-core
          servicePort: 80
      - path: /c/
        backend:
          serviceName: release-name-harbor-core
          servicePort: 80
    host: harbor.shileizcc.com
  - http:
      paths:
      - path: /
        backend:
          serviceName: release-name-harbor-notary-server
          servicePort: 4443
    host: notary.shileizcc.com
